tests/macros/plugin/mask.stderr
error: option `mask` does not exist for kind `plugin`
 --> $DIR/mask.rs:2:46
  |
2 |     let q = inquisition::questions![plugin { mask: todo!() }];
  |                                              ^^^^
