tests/macros/plugin/mask.rs
fn main() {
    let q = inquisition::questions![plugin { mask: todo!() }];
}
